# Tibetan_MaxMatch

./: CMakeLists.txt  README.md
src/: main.cpp
src/utility/: parse.cpp  parse.h  scrubber.cpp  scrubber.h
